--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@awesome-cordova-plugins/core": "5.45.0",
     "@awesome-cordova-plugins/firebase-authentication": "^5.45.0",
     "@capacitor/android": "4.1.0",
     "@capacitor/app": "4.0.1",
@@ -48,6 +49,7 @@
     "@angular/language-service": "^14.0.0",
     "@capacitor/cli": "4.1.0",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/cli": "6.20.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
