--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
-              }
+              },
+              "src/manifest.webmanifest"
+              
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss"],
             "scripts": [],
