--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@angular/service-worker": "^14.0.0",
     "@awesome-cordova-plugins/core": "5.45.0",
     "@awesome-cordova-plugins/firebase-authentication": "^5.45.0",
     "@capacitor/android": "4.1.0",
