--- a/.gitignore
+++ b/.gitignore
@@ -1447,3 +1447,7 @@ www./svg/woman-outline.svg
 www./svg/woman-sharp.svg
 www./svg/woman.svg
 .firebase/hosting.d3d3.cache
+www./1467.716b8f5efaac00f2.js
+www./main.298277cd378eb50d.js
+www./runtime.5555f7f012fa8e50.js
+.firebase/hosting.d3d3.cache
