--- a/.gitignore
+++ b/.gitignore
@@ -1451,3 +1451,7 @@ www./1467.716b8f5efaac00f2.js
 www./main.298277cd378eb50d.js
 www./runtime.5555f7f012fa8e50.js
 .firebase/hosting.d3d3.cache
+www./1467.4a9b2cd20bed257f.js
+www./3698.844c0e325289d264.js
+www./runtime.4cb2720ec1134d89.js
+.firebase/hosting.d3d3.cache
