Padding del home arreglado

--- a/.gitignore
+++ b/.gitignore
@@ -1455,3 +1455,8 @@ www./1467.4a9b2cd20bed257f.js
 www./3698.844c0e325289d264.js
 www./runtime.4cb2720ec1134d89.js
 .firebase/hosting.d3d3.cache
+.firebase/hosting.d3d3.cache
+www./1069.630c1a6b484186e0.js
+www./3698.1bc09d3fb1f839bc.js
+www./7970.df3820e956870e69.js
+www./runtime.4384055ff3e6d542.js
