Redirección al registrar corregida

--- a/.gitignore
+++ b/.gitignore
@@ -1463,3 +1463,6 @@ www./runtime.4384055ff3e6d542.js
 www./3698.ad2926425f74e6bd.js
 .gitignore
 www./runtime.78a58176b528cb55.js
+www./3698.07721826a9818b83.js
+.gitignore
+www./runtime.ea1777aa1f28285e.js
