Añadida funcionalidad tecla enter

--- a/.gitignore
+++ b/.gitignore
@@ -1466,3 +1466,8 @@ www./runtime.78a58176b528cb55.js
 www./3698.07721826a9818b83.js
 .gitignore
 www./runtime.ea1777aa1f28285e.js
+www./1069.5f4351c5b844d578.js
+www./1467.e4b1299d7242e6bb.js
+www./3698.bd974475c3bc53a0.js
+www./7970.9e7ddf00527bdaa3.js
+www./runtime.7933490e1cfb2ffe.js
