Funcionalidades extra añadidas y funcionando

--- a/.gitignore
+++ b/.gitignore
@@ -1471,3 +1471,8 @@ www./1467.e4b1299d7242e6bb.js
 www./3698.bd974475c3bc53a0.js
 www./7970.9e7ddf00527bdaa3.js
 www./runtime.7933490e1cfb2ffe.js
+www./1069.aa97c00eefc856c6.js
+www./1467.eec0c0f2272f42a3.js
+www./3698.f6e8d6588215a18a.js
+www./7970.ad0f2799ad614da6.js
+www./runtime.070549799d44a54a.js
