--- a/.gitignore
+++ b/.gitignore
@@ -1476,3 +1476,6 @@ www./1467.eec0c0f2272f42a3.js
 www./3698.f6e8d6588215a18a.js
 www./7970.ad0f2799ad614da6.js
 www./runtime.070549799d44a54a.js
+www./runtime.6022554f28135971.js
+www./3698.51906785d3d593f2.js
+.firebase/hosting.d3d3.cache
