Añadido hover en botones

--- a/.gitignore
+++ b/.gitignore
@@ -1479,3 +1479,7 @@ www./runtime.070549799d44a54a.js
 www./runtime.6022554f28135971.js
 www./3698.51906785d3d593f2.js
 .firebase/hosting.d3d3.cache
+src/app/pages/chat/chat.component.ts
+www./runtime.a10f1fe5536541b0.js
+www./1467.feab296c0b2278d0.js
+.firebase/hosting.d3d3.cache
