Corregido switch indice

--- a/.gitignore
+++ b/.gitignore
@@ -1483,3 +1483,9 @@ src/app/pages/chat/chat.component.ts
 www./runtime.a10f1fe5536541b0.js
 www./1467.feab296c0b2278d0.js
 .firebase/hosting.d3d3.cache
+www./1069.11284eb17ab92bce.js
+www./1467.cb102ca5a43efd79.js
+www./3698.f8e46a914d0a6bf1.js
+www./7970.aa26dcdd5a1cfb5c.js
+www./main.50f848d7e2f14100.js
+www./runtime.3e6c924b09238c01.js
