Añadida página not found

--- a/.gitignore
+++ b/.gitignore
@@ -1489,3 +1489,5 @@ www./3698.f8e46a914d0a6bf1.js
 www./7970.aa26dcdd5a1cfb5c.js
 www./main.50f848d7e2f14100.js
 www./runtime.3e6c924b09238c01.js
+www./1467.1b52cde680cd9b21.js
+www./runtime.2e141c62c7d5993f.js
