Corregido color botones chat

--- a/.gitignore
+++ b/.gitignore
@@ -1491,3 +1491,4 @@ www./main.50f848d7e2f14100.js
 www./runtime.3e6c924b09238c01.js
 www./1467.1b52cde680cd9b21.js
 www./runtime.2e141c62c7d5993f.js
+www./main.1819a687aa09dec9.js
