Quitando infinite scroll Añadido scroll to bottom

--- a/.gitignore
+++ b/.gitignore
@@ -1492,3 +1492,7 @@ www./runtime.3e6c924b09238c01.js
 www./1467.1b52cde680cd9b21.js
 www./runtime.2e141c62c7d5993f.js
 www./main.1819a687aa09dec9.js
+.firebase/hosting.d3d3.cache
+www./1467.729d5beed3c59b6a.js
+www./runtime.19cef94b4433c311.js
+.firebase/hosting.d3d3.cache
