Corregidas burbujas chat Añadido formato codigo

--- a/.gitignore
+++ b/.gitignore
@@ -1496,3 +1496,6 @@ www./main.1819a687aa09dec9.js
 www./1467.729d5beed3c59b6a.js
 www./runtime.19cef94b4433c311.js
 .firebase/hosting.d3d3.cache
+www./1467.ae762b4c019aafe0.js
+www./main.3a79707d69b0105f.js
+www./runtime.0629e0bd0ed22612.js
