Tamaño burbuja chat corregido

--- a/.gitignore
+++ b/.gitignore
@@ -1499,3 +1499,6 @@ www./runtime.19cef94b4433c311.js
 www./1467.ae762b4c019aafe0.js
 www./main.3a79707d69b0105f.js
 www./runtime.0629e0bd0ed22612.js
+www./1467.47edda716ed32b40.js
+www./main.61864415edfa9dc5.js
+www./runtime.a2c3604bc1785c0a.js
