Tamaño burbuja corregido

--- a/.gitignore
+++ b/.gitignore
@@ -1502,3 +1502,5 @@ www./runtime.0629e0bd0ed22612.js
 www./1467.47edda716ed32b40.js
 www./main.61864415edfa9dc5.js
 www./runtime.a2c3604bc1785c0a.js
+www./runtime.76e3579eb24a51c8.js
+www./1467.ed8fc655bfaa6c5c.js
