Mensaje chat texto justificado

--- a/.gitignore
+++ b/.gitignore
@@ -1506,3 +1506,5 @@ www./runtime.76e3579eb24a51c8.js
 www./1467.ed8fc655bfaa6c5c.js
 www./runtime.57311b15ac461b00.js
 www./1467.5fb716d8d592c617.js
+www./1467.4aeaba350f883059.js
+www./runtime.65ca283198f3fe50.js
