Color error 404 cambiado

--- a/.gitignore
+++ b/.gitignore
@@ -1508,3 +1508,5 @@ www./runtime.57311b15ac461b00.js
 www./1467.5fb716d8d592c617.js
 www./1467.4aeaba350f883059.js
 www./runtime.65ca283198f3fe50.js
+www./1467.f501825eab31b83e.js
+www./runtime.9bc03ec3e77733a1.js
