Añadidas fotos al chat

--- a/.gitignore
+++ b/.gitignore
@@ -1510,3 +1510,15 @@ www./1467.4aeaba350f883059.js
 www./runtime.65ca283198f3fe50.js
 www./1467.f501825eab31b83e.js
 www./runtime.9bc03ec3e77733a1.js
+www./2344.7429cab1ee01d1eb.js
+www./3875.5a5bc768e446bf55.js
+www./3947.a542c9e9a78cf347.js
+www./3954.ec67060e26b15a30.js
+www./5716.a8981685d7921c3b.js
+www./6395.d6af209b8f55fb1a.js
+www./8000.1d3997281895a010.js
+www./8777.90184945aaaa37f4.js
+www./main.998b87b3fd513d2a.js
+www./runtime.4f277cd0a60e1927.js
+www./stencil-polyfills-css-shim.fc989c394b99476f.js
+www./stencil-polyfills-dom.cf68e0967ab83a79.js
