Funcionalidad borrar mensajes Corregidos márgenes

--- a/.gitignore
+++ b/.gitignore
@@ -1522,3 +1522,6 @@ www./main.998b87b3fd513d2a.js
 www./runtime.4f277cd0a60e1927.js
 www./stencil-polyfills-css-shim.fc989c394b99476f.js
 www./stencil-polyfills-dom.cf68e0967ab83a79.js
+www./6395.9dee7621271757e4.js
+www./main.48bb1b2c9ecc5015.js
+www./runtime.eae790e911764989.js
