Icono basura alineado

--- a/.gitignore
+++ b/.gitignore
@@ -1525,3 +1525,8 @@ www./stencil-polyfills-dom.cf68e0967ab83a79.js
 www./6395.9dee7621271757e4.js
 www./main.48bb1b2c9ecc5015.js
 www./runtime.eae790e911764989.js
+www./runtime.95f610de7d856c27.js
+www./6395.4ca30703a4fbca1f.js
+www./runtime.38ebcdcd1b450051.js
+www./6395.2b58d533c33ef986.js
+.firebase/hosting.d3d3.cache
