--- a/.gitignore
+++ b/.gitignore
@@ -1492,3 +1492,16 @@ www./runtime.3e6c924b09238c01.js
 www./1467.1b52cde680cd9b21.js
 www./runtime.2e141c62c7d5993f.js
 www./main.1819a687aa09dec9.js
+www./2344.7429cab1ee01d1eb.js
+www./3875.5a5bc768e446bf55.js
+www./3947.a542c9e9a78cf347.js
+www./3954.ec67060e26b15a30.js
+www./5716.a8981685d7921c3b.js
+www./6395.3d344115ce9af86d.js
+www./7079.a659534470131f0c.js
+www./8000.1d3997281895a010.js
+www./8777.90184945aaaa37f4.js
+www./main.48bb1b2c9ecc5015.js
+www./runtime.c6e71ebffbb9a87a.js
+www./stencil-polyfills-css-shim.fc989c394b99476f.js
+www./stencil-polyfills-dom.cf68e0967ab83a79.js
