Intentar cambiar texto de un chat

--- a/.gitignore
+++ b/.gitignore
@@ -1505,3 +1505,41 @@ www./main.48bb1b2c9ecc5015.js
 www./runtime.c6e71ebffbb9a87a.js
 www./stencil-polyfills-css-shim.fc989c394b99476f.js
 www./stencil-polyfills-dom.cf68e0967ab83a79.js
+.firebase/hosting.d3d3.cache
+www./1467.729d5beed3c59b6a.js
+www./runtime.19cef94b4433c311.js
+.firebase/hosting.d3d3.cache
+www./1467.ae762b4c019aafe0.js
+www./main.3a79707d69b0105f.js
+www./runtime.0629e0bd0ed22612.js
+www./1467.47edda716ed32b40.js
+www./main.61864415edfa9dc5.js
+www./runtime.a2c3604bc1785c0a.js
+www./runtime.76e3579eb24a51c8.js
+www./1467.ed8fc655bfaa6c5c.js
+www./runtime.57311b15ac461b00.js
+www./1467.5fb716d8d592c617.js
+www./1467.4aeaba350f883059.js
+www./runtime.65ca283198f3fe50.js
+www./1467.f501825eab31b83e.js
+www./runtime.9bc03ec3e77733a1.js
+www./2344.7429cab1ee01d1eb.js
+www./3875.5a5bc768e446bf55.js
+www./3947.a542c9e9a78cf347.js
+www./3954.ec67060e26b15a30.js
+www./5716.a8981685d7921c3b.js
+www./6395.d6af209b8f55fb1a.js
+www./8000.1d3997281895a010.js
+www./8777.90184945aaaa37f4.js
+www./main.998b87b3fd513d2a.js
+www./runtime.4f277cd0a60e1927.js
+www./stencil-polyfills-css-shim.fc989c394b99476f.js
+www./stencil-polyfills-dom.cf68e0967ab83a79.js
+www./6395.9dee7621271757e4.js
+www./main.48bb1b2c9ecc5015.js
+www./runtime.eae790e911764989.js
+www./runtime.95f610de7d856c27.js
+www./6395.4ca30703a4fbca1f.js
+www./runtime.38ebcdcd1b450051.js
+www./6395.2b58d533c33ef986.js
+.firebase/hosting.d3d3.cache
