Quitada alerta debug numero tries

--- a/.gitignore
+++ b/.gitignore
@@ -1543,3 +1543,7 @@ www./6395.4ca30703a4fbca1f.js
 www./runtime.38ebcdcd1b450051.js
 www./6395.2b58d533c33ef986.js
 .firebase/hosting.d3d3.cache
+.firebase/hosting.d3d3.cache
+www./1069.f7f404835114e19c.js
+www./6395.c7be1cfadbe9aef3.js
+www./runtime.34eb2f0f6dd29d54.js
