Métodos mejor documentados Cambiada comprobación usuario a Guard

--- a/.gitignore
+++ b/.gitignore
@@ -1547,3 +1547,5 @@ www./6395.2b58d533c33ef986.js
 www./1069.f7f404835114e19c.js
 www./6395.c7be1cfadbe9aef3.js
 www./runtime.34eb2f0f6dd29d54.js
+www./1069.d3712832980c53c6.js
+www./runtime.10ccb7f5a45e2bb9.js
