--- a/.gitignore
+++ b/.gitignore
@@ -1549,3 +1549,11 @@ www./6395.c7be1cfadbe9aef3.js
 www./runtime.34eb2f0f6dd29d54.js
 www./1069.d3712832980c53c6.js
 www./runtime.10ccb7f5a45e2bb9.js
+.firebase/hosting.d3d3.cache
+www./1069.609a82da98f32ebd.js
+www./6445.e50f10fc5d4f6543.js
+www./7970.38ef6c7f542e34d2.js
+www./main.94501b0b93686175.js
+www./runtime.3aa17aec162d93ad.js
+www./main.3ae5ec8ac6ef3927.js
+.firebase/hosting.d3d3.cache
