Añadido menu chat Botones chat transparentes

--- a/.gitignore
+++ b/.gitignore
@@ -1557,3 +1557,5 @@ www./main.94501b0b93686175.js
 www./runtime.3aa17aec162d93ad.js
 www./main.3ae5ec8ac6ef3927.js
 .firebase/hosting.d3d3.cache
+www./6445.5f1b38b1a45dbba5.js
+www./runtime.2503f855425dac94.js
