Modo oscuro acabado

--- a/.gitignore
+++ b/.gitignore
@@ -1559,3 +1559,7 @@ www./main.3ae5ec8ac6ef3927.js
 .firebase/hosting.d3d3.cache
 www./6445.5f1b38b1a45dbba5.js
 www./runtime.2503f855425dac94.js
+www./6445.fc49ceacfaeefc30.js
+www./main.0d0ad2a18754cf22.js
+www./runtime.1d99f0f75fdd406d.js
+www./styles.f40aa7f1203bcf66.css
