--- a/.gitignore
+++ b/.gitignore
@@ -1563,3 +1563,6 @@ www./6445.fc49ceacfaeefc30.js
 www./main.0d0ad2a18754cf22.js
 www./runtime.1d99f0f75fdd406d.js
 www./styles.f40aa7f1203bcf66.css
+www./6445.9ace4c4f66669b01.js
+www./runtime.569a0d3162f42cf7.js
+.firebase/hosting.d3d3.cache
