Añadida funcionalidad borrar cuenta

--- a/.gitignore
+++ b/.gitignore
@@ -1566,3 +1566,9 @@ www./styles.f40aa7f1203bcf66.css
 www./6445.9ace4c4f66669b01.js
 www./runtime.569a0d3162f42cf7.js
 .firebase/hosting.d3d3.cache
+.firebase/hosting.d3d3.cache
+www./6445.8ea6854865410189.js
+www./7970.e53557efd797cde5.js
+www./main.9edeb35aea851fd8.js
+www./runtime.42fc890479e015ea.js
+www./styles.4c28f3d7481196b7.css
