Cambiados botones modal Corregido error geolocalización Quitado log msg service

--- a/.gitignore
+++ b/.gitignore
@@ -1572,3 +1572,10 @@ www./7970.e53557efd797cde5.js
 www./main.9edeb35aea851fd8.js
 www./runtime.42fc890479e015ea.js
 www./styles.4c28f3d7481196b7.css
+www./runtime.924aded406556c92.js
+www./main.875d90d2153ab638.js
+www./6445.5cc59a7bbe0d8eff.js
+.firebase/hosting.d3d3.cache
+www./6445.a3cf69ddf31f80da.js
+www./main.967ac83eaedfa317.js
+www./runtime.61835937663a9afc.js
